@@ -1,6 +1,7 @@
 com.moviejukebox.plugin.poster.AllocinePosterPlugin
 com.moviejukebox.plugin.poster.CaratulasdecinePosterPlugin
 com.moviejukebox.plugin.poster.CdonPosterPlugin
+com.moviejukebox.plugin.poster.ComingSoonPosterPlugin
 com.moviejukebox.plugin.poster.FilmAffinityPosterPlugin
 com.moviejukebox.plugin.poster.FilmUpItPosterPlugin
 com.moviejukebox.plugin.poster.FilmwebPosterPlugin
